--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,14 @@ on:
       - backup
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
 
-    - uses: actions/setup-node@v1
+    - name: use Node.js ${{ matrix.node_version }}
+      uses: actions/setup-node@v1
       with:
-        node_version: '12.x'
+          version: ${{ matrix.node_version }}
     
     - name: Setup hexo
       env: 
