--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: use Node.js ${{ matrix.node_version }}
       uses: actions/setup-node@v1
       with:
-          version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node_version }}
     
     - name: Setup hexo
       env: 
