--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,9 @@ jobs:
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.email "1179502349@qq.com"
         git config --global user.name "dummerchen"
+        chown -R $USER /usr/local 
         npm install hexo-cli -g
         npm install
     
     - name: Generate
-      run: hexo clean && hexo g && hexo d
+      run: hexo clean && hexo generate && hexo deploy
