--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -21,7 +21,10 @@
       descr: 天动万象！
       siteshot: https://image.thum.io/get/width/400/crop/800/allowJPG/wait/20/noanimate/https://itciraos.cn/
       beizhu: 
-    
+    - link: https://hesifan.top/
+      avatar: https://hesifan.top/medias/avatar.jpg
+      name: 凡尘纪
+      descr: 念念不忘 必有回响
 
 - class_name: orz
   class_descr: 膜就完事了
